# automation_rs

./: .dockerignore  .drone.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  config.lua  docker-bake.hcl  rust-toolchain.toml
.cargo/: config.toml
.git-hooks/: pre-commit
.gitea/workflows/: build.yml  checks.yml
assets/: logo.xcf
automation_cast/: Cargo.toml
automation_cast/src/: lib.rs
automation_devices/: Cargo.toml
automation_devices/src/: air_filter.rs  bambu.rs  contact_sensor.rs  debug_bridge.rs  hue_bridge.rs  hue_group.rs  hue_switch.rs  ikea_outlet.rs  ikea_remote.rs  kasa_outlet.rs  lib.rs  light_sensor.rs  ntfy.rs  presence.rs  wake_on_lan.rs  washer.rs
automation_devices/src/zigbee/: light.rs  mod.rs  outlet.rs
automation_lib/: Cargo.toml
automation_lib/src/: action_callback.rs  config.rs  device.rs  device_manager.rs  error.rs  event.rs  lib.rs  messages.rs  mqtt.rs  ntfy.rs  presence.rs
automation_lib/src/helpers/: mod.rs  serialization.rs  timeout.rs
automation_lib/src/lua/: mod.rs  traits.rs
automation_lib/src/lua/utils/: mod.rs  timeout.rs
automation_macro/: Cargo.toml
automation_macro/src/: device.rs  impl_device.rs  lib.rs  lua_device.rs  lua_device_config.rs  lua_type_definition.rs
config/: ares.dev.toml  ares.dev.yml  battery.lua  config.example.toml  config.lua  config.toml  config.yml  debug.lua  hallway_automation.lua  helper.lua  hue_bridge.lua  kettle.lua  light.lua  main.lua  ntfy.lua  presence.lua  rooms.lua  windows.lua  zeus.dev.toml  zeus.dev.yml  zeus_dev.toml
config/rooms/: bathroom.lua  bedroom.lua  guest_bedroom.lua  hallway_bottom.lua  hallway_top.lua  kitchen.lua  living_room.lua  storage.lua  workbench.lua
definitions/: automation:device_manager.lua  automation:devices.lua  automation:mqtt.lua  automation:secrets.lua  automation:utils.lua  automation:variables.lua  config.lua  definitions.lua  generated.lua  interfaces.lua  rust.lua
definitions.bak/: automation:devices.lua.bak
google-home/: Cargo.toml
google-home/src/: attributes.rs  device.rs  errors.rs  fulfillment.rs  fullfillment.rs  lib.rs  request.rs  response.rs  traits.rs  types.rs
google-home/src/request/: execute.rs  query.rs  sync.rs
google-home/src/response/: execute.rs  query.rs  sync.rs
google_home/google_home/: Cargo.toml
google_home/google_home/src/: device.rs  fulfillment.rs  lib.rs  response.rs  traits.rs  types.rs
google_home/google_home/src/request/: execute.rs  query.rs  sync.rs
google_home/google_home/src/response/: execute.rs  query.rs  sync.rs
google_home/google_home_macro/: Cargo.toml
google_home/google_home_macro/src/: lib.rs
impl_cast/: Cargo.toml
impl_cast/src/: lib.rs
serde_luacats/: Cargo.toml
serde_luacats/src/: .ser.rs.pending-snap  error.rs  lib.rs  ser.rs
src/: action_callback.rs  auth.rs  config.rs  debug_bridge.rs  device_manager.rs  devices.rs  error.rs  event.rs  helper.rs  hue_bridge.rs  lib.rs  light_sensor.rs  main.rs  messages.rs  mqtt.rs  ntfy.rs  presence.rs  schedule.rs  secret.rs  state.rs  traits.rs  web.rs  zigbee.rs
src/devices/: air_filter.rs  audio_setup.rs  contact_sensor.rs  debug_bridge.rs  hue_bridge.rs  hue_group.rs  hue_light.rs  hue_switch.rs  ikea_outlet.rs  ikea_remote.rs  kasa_outlet.rs  light_sensor.rs  mod.rs  ntfy.rs  presence.rs  test_outlet.rs  wake_on_lan.rs  washer.rs
src/helpers/: mod.rs  timeout.rs
